# hyperbolic-embedding-research

./: README.md  pyproject.toml  requirements.txt
assets/: pexels_text_custom.json
configs/: eval_zero_shot_retrieval.py
embeddings/: save_image_embeddings.py  save_text_embeddings.py  visualize_all_embeddings.py  visualize_all_embeddings_3d.py
exp_scripts/: compare_img.py  compare_img_text.py  encoders.py  multimodal_traversal.py  pca_2d.py  pca_3d.py  spectrum_all.py  spectrum_statistics.py  umap_2d.py  visualize_traversal_pca.py  visualize_traversal_pca_3d.py  visualize_traversal_umap.py  visualize_traversal_umap_3d.py
meru/utils/: checkpointing.py
scripts/: image_traversals.py
